# sql-requests-tester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py
app/api/routers/: __init__.py  connection.py  pages.py  queries.py
app/models/: __init__.py  query.py
app/services/: __init__.py  query_executor.py
app/static/: script.js  style.css
app/templates/: index.html
templates/: demo.html
